syntax = "proto3";
option java_package = "tech.takenoko.grpcspring.proto";

service Greeter {
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string message = 1;
}

message HelloReply {
  string message = 1;
}